decreased font sizes and fixed spacing

--- a/src/app/questions/default-questions/default-questions.component.css
+++ b/src/app/questions/default-questions/default-questions.component.css
@@ -3,9 +3,8 @@ h3, h5 {
 }
 
 hr {
-  width: 100%;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
+  width: 110%;
+  margin: .5rem -5%;
 }
 
 .question-row {
