--- a/src/app/questions/form/dynamic-form-questions/dynamic-form-questions.component.css
+++ b/src/app/questions/form/dynamic-form-questions/dynamic-form-questions.component.css
@@ -2,15 +2,16 @@ mat-form-field-infix {
   border-top: none!important;
 }
 
-.row {
-  margin: auto 0 -1.8vw 0;
-  padding-right: 5px!important;
-  padding-left: 5px!important;
+.question-row {
+  padding-right: 0!important;
+  padding-left: 0!important;
+  margin-right: 0!important;
+  margin-left: 0!important;
 }
 
 .col-12, .col-sm-6 {
-  padding-right: 0;
-  padding-left: 0;
+  padding-right: 1vw;
+  padding-left: 1vw;
 }
 
 .expansion-panel-form-field {
